# rystra

./: .gitignore  Cargo.toml  README.md
certificates/: ca-cert.pem  ca-key.pem  openssl生成证书命令.txt  server-cert.pem  server-key.pem
config/: client.toml
crates/plugins/: README.md
crates/plugins/auth/rystra-auth-token/: Cargo.toml
crates/plugins/auth/rystra-auth-token/src/: lib.rs
crates/plugins/proxy/rystra-proxy-http/: Cargo.toml
crates/plugins/proxy/rystra-proxy-http/src/: lib.rs
crates/plugins/proxy/rystra-proxy-tcp/: Cargo.toml
crates/plugins/proxy/rystra-proxy-tcp/src/: lib.rs
crates/plugins/transport/rystra-transport-http/: Cargo.toml
crates/plugins/transport/rystra-transport-http/src/: lib.rs
crates/plugins/transport/rystra-transport-tcp/: Cargo.toml
crates/plugins/transport/rystra-transport-tcp/src/: lib.rs
crates/plugins/transport/rystra-transport-tls/: Cargo.toml
crates/plugins/transport/rystra-transport-tls/src/: lib.rs
crates/rystra-client/: Cargo.toml
crates/rystra-client/src/: main.rs
crates/rystra-config/: Cargo.toml  client.toml  server.toml
crates/rystra-config/src/: config.rs  lib.rs  validate.rs
crates/rystra-config/src/config/: client_config.rs  mod.rs  proxy.rs  server_config.rs  tls_config.rs  transport_kind.rs  web_server_config.rs
crates/rystra-core/: Cargo.toml
crates/rystra-core/src/: codec.rs  connection.rs  lib.rs  proxy_manager.rs
crates/rystra-core/src/auth/: mod.rs  models.rs  token.rs
crates/rystra-core/src/config/: common_config.rs  mod.rs  validation.rs
crates/rystra-core/src/metrics/: mod.rs
crates/rystra-core/src/models/: mod.rs  tunnel.rs  user.rs
crates/rystra-core/src/network/: connection.rs  mod.rs
crates/rystra-core/src/protocol/: message.rs  mod.rs  types.rs
crates/rystra-core/src/utils/: error.rs  mod.rs
crates/rystra-model/: Cargo.toml
crates/rystra-model/src/: error.rs
crates/rystra-net/: Cargo.toml
crates/rystra-net/src/: lib.rs
crates/rystra-observe/: Cargo.toml
crates/rystra-observe/src/: lib.rs
crates/rystra-plugin/: Cargo.toml
crates/rystra-plugin-registry/: Cargo.toml
crates/rystra-plugin-registry/src/: lib.rs
crates/rystra-plugin/src/: lib.rs
crates/rystra-proto/: Cargo.toml
crates/rystra-proto/src/: lib.rs
crates/rystra-runtime/: Cargo.toml
crates/rystra-runtime/src/: lib.rs
crates/rystra-server/: Cargo.toml
crates/rystra-server/src/: main.rs
crates/rystra-shared/: Cargo.toml
crates/rystra-testkit/: Cargo.toml
crates/rystra-testkit/src/: lib.rs
crates/rystra-testkit/tests/: dependency_rules.rs
doc/: 交叉编译.md
