[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[workspace]
resolver = "2"
members = ["crates/rystra-client", "crates/rystra-core", "crates/rystra-server", "crates/rystra-shared"]
[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tokio = { version = "1.48.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20" }
axum = { version = "0.8" }
uuid = { version = "1.19.0", features = ["v4"] }
toml = {version = "0.9"}
[profile.release]
lto = true
strip = true
