[workspace]
resolver = "2"

members = [
    "crates/rystra-model",
    "crates/rystra-proto",
    "crates/rystra-plugin",
    "crates/rystra-plugin-registry",
    "crates/rystra-core",
    "crates/rystra-net",
    "crates/rystra-runtime",
    "crates/rystra-config",
    "crates/rystra-observe",
    "crates/rystra-server",
    "crates/rystra-client",
    "crates/rystra-testkit",
    "crates/plugins/proxy/rystra-proxy-tcp",
    "crates/plugins/transport/rystra-transport-tcp",
    "crates/plugins/transport/rystra-transport-tls",
    "crates/plugins/auth/rystra-auth-token",
]
[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"

[workspace.dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"
tokio = {version = "1.48.0",features = ["full"]}
tokio-rustls = "0.26.4"
async-trait = "0.1.89"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22",features = ["env-filter"]}
rustls-pemfile = "2.2.0"