[package]
name = "rystra-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "rystra-client"
path = "src/main.rs"

[dependencies]
toml.workspace = true
rystra-core = { path = "../rystra-core" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true