[package]
name = "rystra-client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rystra-config = { path = "../rystra-config" }
rystra-model = { path = "../rystra-model" }
rystra-proto = { path = "../rystra-proto" }
rystra-core = { path = "../rystra-core" }
rystra-observe = { path = "../rystra-observe" }
tokio.workspace = true
serde_json.workspace = true