[package]
name = "rystra-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rystra-config = { path = "../rystra-config" }
rystra-model = { path = "../rystra-model" }
rystra-proto = { path = "../rystra-proto" }
rystra-core = { path = "../rystra-core" }
rystra-plugin = { path = "../rystra-plugin" }
rystra-observe = { path = "../rystra-observe" }
rystra-transport-tcp = { path = "../plugins/transport/rystra-transport-tcp" }
rystra-auth-token = { path = "../plugins/auth/rystra-auth-token" }
tokio.workspace = true
serde.workspace = true