[package]
name = "rystra-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rystra-config = { path = "../rystra-config" }
rystra-model = { path = "../rystra-model" }
rystra-proto = { path = "../rystra-proto" }
rystra-core = { path = "../rystra-core" }
rystra-plugin = { path = "../rystra-plugin" }
rystra-observe = { path = "../rystra-observe" }
rystra-auth-token = { path = "../plugins/auth/rystra-auth-token" }
rystra-transport-tcp = { path = "../plugins/transport/rystra-transport-tcp" }
rystra-transport-tls = { path = "../plugins/transport/rystra-transport-tls" }
rystra-runtime = { path = "../rystra-runtime" }
tokio.workspace = true
serde_json.workspace = true
hyper.workspace = true
http-body-util.workspace = true
hyper-util.workspace = true