[package]
name = "rystra-transport-http"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rystra-model = { path = "../../../rystra-model" }
rystra-plugin = { path = "../../../rystra-plugin" }
tokio.workspace = true
async-trait.workspace = true
hyper.workspace = true
hyper-util.workspace = true