[package]
name = "rystra-transport-tls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
rystra-model = { path = "../../../rystra-model" }
rystra-plugin = { path = "../../../rystra-plugin" }
tokio.workspace = true
async-trait.workspace = true
tokio-rustls.workspace = true
rustls-pemfile.workspace = true